# rats-tls-whu

./: CMakeLists.txt  flake.nix
cmake/: CompilerOptions.cmake  CustomInstallDirs.cmake
samples/rats-tls-client/: CMakeLists.txt  client.c
samples/rats-tls-server/: CMakeLists.txt  server.c
src/: CMakeLists.txt
src/api/: rats_tls_init.c
src/attesters/: CMakeLists.txt
src/attesters/api/: enclave_attester_register.c
src/attesters/arm-cca/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c
src/attesters/cca-migration/: CMakeLists.txt  cca_migration.h  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c
src/attesters/internal/: rtls_enclave_attester_load_all.c
src/core/: cpu.c  dice.c
src/include/internal/: attester.h  cpu.h  crypto_wrapper.h  dice.h  tls_wrapper.h  verifier.h
src/include/rats-tls/: attester.h  cert.h  verifier.h
src/tls_wrappers/api/: tls_wrapper_verify_certificate_extension.c
src/verifiers/: CMakeLists.txt
src/verifiers/arm-cca/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
